--- a/antipode_site/index.html
+++ b/antipode_site/index.html
@@ -3,19 +3,14 @@
 <head>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Test</title>
+	<script src='https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
+	<link href='https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<title>Find Your Antipode</title>
 </head>
 <body>
-	<!--<h1>Discover your antipode</h1> -->
-	<div class="flex-container">
-		<button id="mybutton" class="button">Find Out!</button>
-		<p id="currentLat"></p>
-		<p id="currentLong"></p>
-		<p id="antiPodeLat"></p>
-		<p id="antiPodeLong"></p>
-	</div>
-	<!--<a target="_blank" id="map_link"></a> -->
+	<button id="mybutton" class="button">Find the Other Side of the World!</button>
+	<div id='map'></div>
 </body>
-	<script src="myScript.js"></script>
+	 <script src="myScript.js"></script>
 </html>
