--- a/antipode_site/index.html
+++ b/antipode_site/index.html
@@ -4,12 +4,19 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src='https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
+	<script src='https://api.mapbox.com/mapbox.js/v3.1.1/mapbox.js'></script>
 	<link href='https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
+	<link href='https://api.mapbox.com/mapbox.js/v3.1.1/mapbox.css' rel='stylesheet' />
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
 	<title>Find Your Antipode</title>
 </head>
 <body>
 	<button id="mybutton" class="button">Find the Other Side of the World!</button>
+	<p>Or Find by City:</p>
+	<div id="box">
+		<input type="text" id="cityState" name="cityState">
+		<input type="submit" id="cityStateButton">
+	</div>
 	<div id='map'></div>
 </body>
 	 <script src="myScript.js"></script>
